# Email-AI-app

./: .dockerignore  .env.example  .env.test  .gitignore  API.md  DEPLOYMENT_REPORT.md  DEVELOPERS.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.simple  README.md  alembic.ini  app.py  craco.config.js  create_test_user.py  cypress.d.ts  docker-compose.override.yml  docker-compose.yml  fix-emailcontext.patch  fix-errorboundary.sh  generate_hash.py  insert_user.sql  insert_user2.sql  jest.config.js  jest.config.ts  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  server.js  setup.py  temp.env  test_import.py  tsconfig.json  vercel.json
.mypy_cache/: missing_stubs
alembic/: env.py
backend/: Dockerfile  Procfile  app.py  auth.py  config.py  conftest.py  database.py  main.py  pytest.ini
docs/: ACCESSIBILITY.md  DEPLOYMENT.md  MVP_STATUS.md  ROADMAP.md  STATUS.md  USER_TESTING.md  USER_TESTING_GUIDE.md  implementation-summary.md  knowledge_graph_memory.md  landing-page-updates.md  login-onboarding-flow.md  logo-instructions.md  templates.md
email_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  Dockerfile
migrations/: env.py
public/: index.html  manifest.json
scripts/: deploy.sh  entrypoint.sh  manage_db.sh  start.sh  test-runner.sh
src/: App.tsx  ErrorBoundary.tsx  config.ts  index.tsx  routes.tsx  setupTests.ts  styles.css  theme.ts
temp_backup/: Dockerfile  Dockerfile.frontend  docker-compose.yml  prometheus.yml
tests/: test_email_api.py
(+2595 files in other folders)
